--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ dependencies:
 
 test:
   pre:
-      - go vet ./...
+      - go vet src/...
 
   override:
-      - godep go test ./...
+      - godep go test src/...
